fix: the center-div class works properly now, when you had the navbar, footer and an element using the custom center-div class, it would push the footer out of view even though there was enough space for it.

--- a/src/nginx/static/fionas_pages/template.css
+++ b/src/nginx/static/fionas_pages/template.css
@@ -3,24 +3,17 @@ html {
 }
 
 body {
-	min-height: 100%;
-	display: flex;
-	flex-direction: column;
 	background: rgb(52, 52, 56);
-}
-
-footer {
-	margin-top: auto;
 }
 
 .dark-footer-border-bottom {
 	border-bottom: 1px solid rgb(60, 60, 68);
 }
 
-/* Login Page */
+/* center elements vertically and horizontally */
 .center-div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	height: 100%;
 }
